# Euclid_2D-Mass-WeakLensing

./: CMakeLists.txt  README.md
TWOD_MASS_WL_CatalogSplitter/: CMakeLists.txt  CMakeLists.txt~
TWOD_MASS_WL_CatalogSplitter/TWOD_MASS_WL_CatalogSplitter/: BasicSplitter.h  CatalogSplitterParser.h  MaskSplitter.h
TWOD_MASS_WL_CatalogSplitter/conf/TWOD_MASS_WL_CatalogSplitter/: CatalogSplitter.conf
TWOD_MASS_WL_CatalogSplitter/src/lib/: BasicSplitter.cpp  CatalogSplitterParser.cpp  MaskSplitter.cpp
TWOD_MASS_WL_CatalogSplitter/src/program/: CatalogSplitter.cpp
TWOD_MASS_WL_CatalogSplitter/tests/src/: BasicSplitter_test.cpp  CatalogSplitterParser_test.cpp  FITScatalog_noK_withZ.fits  FITScatalog_ok_noz.fits  MaskSplitter_test.cpp
TWOD_MASS_WL_Launcher/: CMakeLists.txt  CMakeLists.txt~
TWOD_MASS_WL_Launcher/TWOD_MASS_WL_Launcher/: PFAlgo.h  PFLauncherParser.h  XMLParser.h
TWOD_MASS_WL_Launcher/conf/TWOD_MASS_WL_Launcher/: PFLauncher.conf
TWOD_MASS_WL_Launcher/src/lib/: PFAlgo.cpp  PFLauncherParser.cpp  XMLParser.cpp
TWOD_MASS_WL_Launcher/src/program/: PFLauncher.cpp
TWOD_MASS_WL_Launcher/tests/src/: PFAlgo_test.cpp  PFLauncherParser_test.cpp  XMLParser_test.cpp  badXML.xml
TWOD_MASS_WL_MapMaker/: CMakeLists.txt
TWOD_MASS_WL_MapMaker/TWOD_MASS_WL_MapMaker/: CatalogHandler.h  FITSCatalogHandler.h  MapMakerParser.h  SSVCatalogHandler.h
TWOD_MASS_WL_MapMaker/conf/2D-MASS-WL_MapExtractor/: MapExtractor.conf
TWOD_MASS_WL_MapMaker/src/lib/: CatalogHandler.cpp  FITSCatalogHandler.cpp  MapMakerParser.cpp  SSVCatalogHandler.cpp
TWOD_MASS_WL_MapMaker/src/program/: MapMaker.cpp
TWOD_MASS_WL_MapMaker/tests/src/: CatalogHandler_test.cpp  FITSCatalogHandler_test.cpp  FITScatalog_noDec_noz.fits  FITScatalog_noG1_noz.fits  FITScatalog_noG2_noz.fits  FITScatalog_noK_noz.fits  FITScatalog_noRa_noz.fits  MapMakerParser_test.cpp  SSVCatalogHandler_test.cpp
TWOD_MASS_WL_MapMerger/: CMakeLists.txt
TWOD_MASS_WL_MapMerger/TWOD_MASS_WL_MapMerger/: DummyClass.h
TWOD_MASS_WL_MapMerger/conf/TWOD_MASS_WL_MapMerger/: MapMerger.conf
TWOD_MASS_WL_MapMerger/src/lib/: DummyClass.cpp
TWOD_MASS_WL_MapMerger/src/program/: MapMerger.cpp
TWOD_MASS_WL_MapMerger/tests/src/: DummyClass_test.cpp
TWOD_MASS_WL_MassMapping/: CMakeLists.txt
TWOD_MASS_WL_MassMapping/TWOD_MASS_WL_MassMapping/: Boundaries.h  ConvergenceMap.h  DataFilesLoader.h  GlobalMap.h  ImProcessing.h  Image.h  InPaintingAlgo.h  MassMappingParser.h  ShearMap.h
TWOD_MASS_WL_MassMapping/conf/2D-MASS-WL_MassMapping/: MassMapping.conf
TWOD_MASS_WL_MassMapping/src/lib/: Boundaries.cpp  ConvergenceMap.cpp  DataFilesLoader.cpp  GlobalMap.cpp  ImProcessing.cpp  Image.cpp  InPaintingAlgo.cpp  MassMappingParser.cpp  ShearMap.cpp
TWOD_MASS_WL_MassMapping/src/program/: MassMapping.cpp
TWOD_MASS_WL_MassMapping/tests/src/: Boundaries_test.cpp  ConvergenceMap_test.cpp  DataFilesLoader_test.cpp  GlobalMap_test.cpp  ImProcessing_test.cpp  Image_test.cpp  InPaintingAlgo_test.cpp  MassMappingParser_test.cpp  ShearMap_test.cpp
TWOD_MASS_WL_PeakCount/: CMakeLists.txt
TWOD_MASS_WL_PeakCount/TWOD_MASS_WL_PeakCount/: PeakCountAlgo.h  PeakCountParser.h
TWOD_MASS_WL_PeakCount/conf/2D-MASS-WL_PeakCount/: PeakCount.conf
TWOD_MASS_WL_PeakCount/src/lib/: PeakCountAlgo.cpp  PeakCountParser.cpp
TWOD_MASS_WL_PeakCount/src/program/: PeakCount.cpp
TWOD_MASS_WL_PeakCount/tests/src/: PeakCountAlgo_test.cpp  PeakCountParser_test.cpp
